--- a/module/m_test/src/main/AndroidManifest.xml
+++ b/module/m_test/src/main/AndroidManifest.xml
@@ -7,6 +7,15 @@
         <activity
             android:name=".TestLayoutActivity"
             android:exported="true">
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
+
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
+        </activity>
+        <activity
+            android:name=".TestScrollViewActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
